# mccabre

./: .gitignore  CHANGELOG.md  Cargo.toml  README  todo.txt
crates/cli/: Cargo.toml
crates/cli/src/: highlight.rs  main.rs
crates/cli/src/commands/: analyze.rs  clones.rs  complexity.rs  coverage.rs  dump_config.rs  loc.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  highlight.rs  lib.rs  loader.rs  tokenizer.rs
crates/core/src/cloner/: detector.rs  mod.rs  rolling_hash.rs
crates/core/src/complexity/: cyclomatic.rs  loc.rs  mod.rs
crates/core/src/coverage/: lcov.rs  misses.rs  mod.rs  model.rs  paths.rs
crates/core/src/reporter/: coverage_detailed.rs  coverage_jsonl.rs  coverage_term.rs  legacy.rs  mod.rs
docs/: book.toml
docs/src/: SUMMARY.md  cli-reference.md  clone-detection.md  configuration.md  cyclomatic-complexity.md  examples.md  installation.md  introduction.md  lines-of-code.md  quickstart.md
examples/: complex.js  long.py  not_dry.go
