[package]
name = "mccabre-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ignore = "0.4.25"
lcov = "0.8"
owo-colors = "4.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
walkdir = "2.5"
toml = "0.8"
syntect = "5.2"

[dev-dependencies]
tempfile = "3.14"
